k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "calculate-deployment"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "calculate"
  template:
    metadata:
      labels:
        app: "calculate"
    spec:
      containers:
        - name: "calculate"
          image: "harrissonbiaggio94/calculate:v3"
          ports:
            - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: calculate-service
spec:
  ports:
    - port: 80
      name: http-web
      targetPort: 5000
  type: ClusterIP
  selector:
    app: calculate
